argocd/clusters/managed-clusters/rhds-test/live/gpu-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    openshift.io/cluster-monitoring: "true"
  name: nvidia-gpu-operator
spec: {}
